Opened 12 years ago

Closed 12 years ago

#3128 closed defect (fixed)

cavs silently ignores garbage data

Reported by: Timothy Gu Owned by:
Priority: minor Component: avcodec
Version: git-master Keywords: cavs
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
I generated some junk from /dev/urandom and fed it to cavs, and it just silently ignores the junk and outputed no frame. It should at least split out some error messages.

How to reproduce:

./ffmpeg -s 640x320 -f rawvideo -vcodec cavs -i ran -f null -
ffmpeg version N-58044-ge1c7892 Copyright (c) 2000-2013 the FFmpeg developers
  built on Nov 12 2013 15:55:42 with gcc 4.8 (Ubuntu/Linaro 4.8.1-10ubuntu8)
  configuration: 
  libavutil      52. 52.100 / 52. 52.100
  libavcodec     55. 41.100 / 55. 41.100
  libavformat    55. 21.100 / 55. 21.100
  libavdevice    55.  5.100 / 55.  5.100
  libavfilter     3. 90.102 /  3. 90.102
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
[rawvideo @ 0x2bc5a20] Estimating duration from bitrate, this may be inaccurate
Input #0, rawvideo, from 'ran':
  Duration: 00:00:05.56, start: 0.000000, bitrate: 61292 kb/s
    Stream #0:0: Video: cavs, yuv420p, 640x320, 61440 kb/s, 25 fps, 25 tbr, 25 tbn, 25 tbc
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf55.21.100
    Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuv420p, 640x320, q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (cavs -> rawvideo)
Press [q] to stop, [?] for help
frame=    0 fps=0.0 q=0.0 Lsize=N/A time=00:00:00.00 bitrate=N/A    
video:0kB audio:0kB subtitle:0 global headers:0kB muxing overhead -inf%
Output file is empty, nothing was encoded (check -ss / -t / -frames parameters if used)

Change History (4)

comment:1 by Timothy Gu, 12 years ago

I'll upload "ran" file some time later as I don't have access to my PC right now.

comment:2 by Carl Eugen Hoyos, 12 years ago

Keywords: cavs added
Priority: normalminor
Reproduced by developer: set
Status: newopen
$ ./ffmpeg -s 640x320 -f rawvideo -vcodec cavs -i fate-suite/svq3/Vertical400kbit.sorenson3.mov -f null -
ffmpeg version N-58049-gf04fe23 Copyright (c) 2000-2013 the FFmpeg developers
  built on Nov 13 2013 12:11:43 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 52.100 / 52. 52.100
  libavcodec     55. 41.101 / 55. 41.101
  libavformat    55. 21.100 / 55. 21.100
  libavdevice    55.  5.100 / 55.  5.100
  libavfilter     3. 91.100 /  3. 91.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
  libpostproc    52.  3.100 / 52.  3.100
[rawvideo @ 0x2484a20] Estimating duration from bitrate, this may be inaccurate
Input #0, rawvideo, from 'fate-suite/svq3/Vertical400kbit.sorenson3.mov':
  Duration: 00:00:00.40, start: 0.000000, bitrate: 63239 kb/s
    Stream #0:0: Video: cavs, yuv420p, 640x320, 61440 kb/s, 25 tbr, 25 tbn, 25 tbc
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf55.21.100
    Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuv420p, 640x320, q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (cavs -> rawvideo)
Press [q] to stop, [?] for help
frame=    0 fps=0.0 q=0.0 Lsize=N/A time=00:00:00.00 bitrate=N/A
video:0kB audio:0kB subtitle:0 global headers:0kB muxing overhead -inf%
Output file is empty, nothing was encoded (check -ss / -t / -frames parameters if used)

in reply to:  2 comment:3 by Timothy Gu, 12 years ago

Replying to cehoyos

Oh OK, seems like you can reproduce this bug. Then I won't upload the file then.

Last edited 12 years ago by Timothy Gu (previous) (diff)

comment:4 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.